--- a/themes/studiodevs/layouts/default.htm
+++ b/themes/studiodevs/layouts/default.htm
@@ -13,19 +13,18 @@
     <meta property="og:title" content="{{ this.page.title }}">
 
     <!-- Favicons -->
-    {# <link href="{{ 'assets/img/favicon_blue.png' | theme }}" rel="icon">
-    <link href="{{ 'assets/img/favicon_blue.png' | theme }}" rel="apple-touch-icon"> #}
+    <link href="{{ 'assets/images/favicons/favicon-32x32.png' | theme }}" rel="icon" type="image/png" sizes="32x32">
+    <link href="{{ 'assets/images/favicons/favicon-16x16.png' | theme }}" rel="icon" type="image/png" sizes="16x16">
+    <link href="{{ 'assets/images/favicons/apple-touch-icon.png' | theme }}" rel="apple-touch-icon">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-    <!-- Vendor CSS Files -->
-    <link href="{{'assets/vendor/bootstrap/css/bootstrap.min.css' | theme }}" rel="stylesheet">
-    <link href="{{'assets/vendor/bootstrap-icons/bootstrap-icons.css' | theme }}" rel="stylesheet">
-    <link href="{{'assets/vendor/boxicons/css/boxicons.min.css' | theme }}" rel="stylesheet">
-    <link href="{{'assets/vendor/glightbox/css/glightbox.min.css' | theme }}" rel="stylesheet">
-    <link href="{{'assets/vendor/remixicon/remixicon.css' | theme }}" rel="stylesheet">
-    <link href="{{'assets/vendor/swiper/swiper-bundle.min.css' | theme }}" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="{{'assets/css/style.css' | theme }}" rel="stylesheet">
