--- a/themes/studiodevs/assets/css/style.css
+++ b/themes/studiodevs/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --primary_color: #011936;
+    --secondary-color: #9FC490;
+    --tertiary-color: #C0DFA1;
+}
 body {
     font-family: "Nunito", serif;
     font-optical-sizing: auto;
@@ -6,23 +11,48 @@ body {
     color: #444444;
 }
 
+.offcanvas {
+    background-color: var(--primary_color) !important;
+    color: var(--secondary-color);
+}
+
+.btn-primary {
+    background-color: var(--primary_color) !important;
+    color: var(--secondary-color);
+    border-color: var(--primary_color);
+}
+
+.btn-primary:hover {
+    background-color: var(--secondary-color) !important;
+    color: var(--primary_color);
+    border-color: var(--secondary-color);
+}
+
 .section-bg {
     background-color: #f3f5fa;
 }
 
 .footer {
-    background-color: #011936;
-    color: #9FC490;
+    background-color: var(--primary_color);
+    color: var(--tertiary-color);
 }
 
-.footer ul {
-    color: #9FC490 !important;
+.nav-link {
+    color: var(--secondary-color) !important;
+}
+
+.link-body-emphasis {
+    color: var(--secondary-color) !important;
+}
+
+.link-body-emphasis:hover {
+    color: var(--tertiary-color) !important;
 }
 
 .newsletter-button {
-    background-color: #C0DFA1;
+    background-color: var(--tertiary-color);
 }
 
-.newsletter-button :hover {
-    background-color: #9FC490;
+.newsletter-button:hover {
+    background-color: var(--secondary-color) !important;
 }
