--- a/themes/studiodevs/partials/footer.htm
+++ b/themes/studiodevs/partials/footer.htm
@@ -1,5 +1,5 @@
 <div class="container">
-  <footer class="py-5 footer">
+  <footer class="py-5">
     <div class="row">
       <div class="col-6 col-md-2 mb-3">
         <h5>Section</h5>
@@ -36,23 +36,24 @@
 
       <div class="col-md-5 offset-md-1 mb-3">
         <form>
-          <h5>Subscribe to our newsletter</h5>
-          <p>Monthly digest of what's new and exciting from us.</p>
+          <h5>Zapisz się na nasz newsletter</h5>
+          <p>Bądź na bieżąco</p>
           <div class="d-flex flex-column flex-sm-row w-100 gap-2">
             <label for="newsletter1" class="visually-hidden">Email address</label>
             <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-            <button class="btn newsletter" type="button">Subscribe</button>
+            <button class="btn newsletter-button" type="button">Zapisz</button>
           </div>
         </form>
       </div>
     </div>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-      <p>&copy; sompany, Inc. All rights reserved.</p>
+    <div class="d-flex flex-column flex-sm-row justify-content-between pt-4 mt-2 border-top">
+      <p class="text-center">Wszelkie prawa zastrzeżone. &copy; {{ now|date('Y') }}, StudioDEVS</p>
       <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-github"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-facebook"></i></a></li>
       </ul>
     </div>
   </footer>
