--- a/themes/studiodevs/layouts/user.htm
+++ b/themes/studiodevs/layouts/user.htm
@@ -31,7 +31,7 @@ redirect = "login"
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="{{'assets/css/dom-style.css' | theme }}" rel="stylesheet">
+    <link href="{{'assets/css/user.css' | theme }}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3b577f4961.js" crossorigin="anonymous"></script>
 
     {% styles %}
@@ -41,9 +41,7 @@ redirect = "login"
 <body>
     {% partial 'header' %}
     {% page %}
-<section class="footer mt-auto">
     {% partial 'footer' %}
-</section>
 </body>
 
 </html>
