--- a/themes/studiodevs/assets/css/user.css
+++ b/themes/studiodevs/assets/css/user.css
@@ -1,46 +1,74 @@
 :root {
     --primary_color: #011936;
-    --secondary-color: #9FC490;
-    --tertiary-color: #C0DFA1;
+    --secondary-color: #9fc490;
+    --tertiary-color: #c0dfa1;
+    --text-color: #fff;
 }
+html {
+    font-size: 16px;
+}
+
 body {
     font-family: "Nunito", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    color: #444444;
+    background-color: var(--primary_color);
 }
 
-.hero {
-    width: 100vh;
-    height: 100vh;
+.footer {
+    background-color: var(--primary_color);
+    color: var(--tertiary-color);
 }
 
-/* login form */
-.gradient-custom-2 {
-/* fallback for old browsers */
-background: #fccb90;
-
-/* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+a {
+    text-decoration: none;
 }
 
-@media (min-width: 768px) {
-.gradient-form {
-height: 100vh !important;
-}
-}
-@media (min-width: 769px) {
-.gradient-custom-2 {
-border-top-right-radius: .3rem;
-border-bottom-right-radius: .3rem;
-}
+ul {
+    list-style-type: none;
 }
 
-/* login form end */
+.navbar {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
+
+.nav-col-item {
+    color: var(--secondary-color);
+}
+
+.user-dropdown {
+    list-style: none;
+}
+
+.username {
+    color: var(--secondary-color);
+    font-size: .9rem;
+}
+
+.user-icon {
+    color: var(--secondary-color);
+}
+
+.user-details {
+    background-color: #f3f5fa;
+}
+
+.form-label {
+    color: var(--text-color);
+}
+
+.card {
+    transition: all 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+.form-control {
+    color: var(--primary-color) !important;
+}
 
 .offcanvas {
     background-color: var(--primary_color) !important;
@@ -64,8 +92,8 @@ border-bottom-right-radius: .3rem;
 }
 
 .footer {
-    background-image: url("/themes/studiodevs/assets/images/footer-bg.jpg");
-    background-size: contain;
+    background-color: var(--primary_color);
+    color: var(--tertiary-color);
 }
 
 .nav-link {
