--- a/themes/studiodevs/partials/header.htm
+++ b/themes/studiodevs/partials/header.htm
@@ -1,52 +1,74 @@
 <main>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Offcanvas navbar large">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Responsive offcanvas navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand mx-5" href="{{ "homepage"|page }}">
+                <img src="{{ 'assets/images/favicons/favicon-32x32.png'|theme }}" alt="Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item user-dropdown dropdown">
+                        <a class="nav-link dropdown-toggle" href="{{ "dom/dom"|page }}" data-bs-toggle="dropdown" aria-expanded="false">Collection</a>
+                        <ul class="dropdown-menu">
+                            <li class="d-flex align-items-center">
+                                <a href="{{ "dom/albums"|page }}"
+                                   class="dropdown-item"><i class="nav-col-item fa-solid fa-compact-disc me-2"></i>
+                                    Albums</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <a href="{{ "dom/creategame"|page }}"
+                                   class="dropdown-item"><i class="nav-col-item fa-solid fa-gamepad me-1"></i> Games</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <a href="{{ "dom/books"|page }}"
+                                   class="dropdown-item"><i class="nav-col-item fa-solid fa-book me-2"></i> Books</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <span class="navbar-text me-4">
+                    {% if user %}
+                    <li class="user-dropdown nav-item dropdown">
+                        <div class="d-flex align-items-center">
+                            <p class="pt-3 me-3 username">{{ user.fullname }}</p>
+                            <a href="#" class="nav-link dropdown-toggle" id="user" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="{{ user.avatar.thumb(50, 50, ('crop')) }}"
+                                    alt="User Avatar">
+                            </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user">
+                            <li>
+                                <a class="dropdown-item" href="{{ "user/details"|page }}">
+                                    <i class="user-icon fa-solid fa-user-pen mx-2"></i> Edit
+                                </a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li>
+                                <a class="dropdown-item"
+                                   data-request="onLogout"
+                                   data-request-data="{ redirect: '/' }">
+                                    <i class="user-icon fa-solid fa-arrow-right-from-bracket"></i> Logout
+                                </a>
+                            </li>
+                        </ul>
+                        </div>
+                    </li>
+                    {% else %}
+                    <a href="{{ "user/login"|page }}">
+                        <i class="fa-regular fa-user"></i>
+                    </a>
+                    {% endif %}
+                </span>
+            </div>
         </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container my-5">
-    <div class="bg-body-tertiary p-5 rounded">
-      <div class="col-sm-8 py-5 mx-auto">
-        <h1 class="display-5 fw-normal">Navbar with offcanvas examples</h1>
-        <p class="fs-5">This example shows how responsive offcanvas menus work within the navbar. For positioning of navbars, checkout the <a href="#">top</a> and <a href="#">fixed top</a> examples.</p>
-        <p>From the top down, you'll see a dark navbar, light navbar and a responsive navbar—each with offcanvases built in. Resize your browser window to the large breakpoint to see the toggle for the offcanvas.</p>
-        <p>
-          <a class="btn btn-primary" href="#" role="button">Learn more about offcanvas navbars &raquo;</a>
-        </p>
-    </div>
-    </div>
-  </div>
+    </nav>
 </main>
