--- a/themes/stdevs/partials/home/hero.htm
+++ b/themes/stdevs/partials/home/hero.htm
@@ -5,8 +5,8 @@
     <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
             <div class="col-xl-6 col-lg-8">
-                <h2>Powerful Digital Solutions With GP<span>.</span></h2>
-                <p>We are team of talented digital marketers</p>
+                <h2>Innowacyjne strony i aplikacje<span>.</span></h2>
+                <p>Pomagamy firmom rozwijać się w świecie cyfrowym.</p>
             </div>
         </div>
 
