--- a/themes/stdevs/layouts/default.htm
+++ b/themes/stdevs/layouts/default.htm
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="{{'assets/img/favicon.png'|theme}}" rel="icon">
+  <link href="{{'assets/img/logo.webp'|theme}}" rel="icon">
   <link href="{{'assets/img/apple-touch-icon.png'|theme}}" rel="apple-touch-icon">
 
   <!-- Fonts -->
