--- a/themes/stdevs/partials/home/contact.htm
+++ b/themes/stdevs/partials/home/contact.htm
@@ -2,8 +2,8 @@
 <section id="contact" class="contact section">
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Contact Us</p>
+        <h2>Kontakt</h2>
+        <p>Zapraszamy do nas</p>
     </div>
     <!-- End Section Title -->
 
@@ -25,8 +25,8 @@
                 <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-geo-alt flex-shrink-0"></i>
                     <div>
-                        <h3>Address</h3>
-                        <p>A108 Adam Street, New York, NY 535022</p>
+                        <h3>Adres</h3>
+                        <p>Chańcza 79, 26-035</p>
                     </div>
                 </div>
                 <!-- End Info Item -->
@@ -34,8 +34,8 @@
                 <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                     <i class="bi bi-telephone flex-shrink-0"></i>
                     <div>
-                        <h3>Call Us</h3>
-                        <p>+1 5589 55488 55</p>
+                        <h3>Zadzwoń</h3>
+                        <p>724 414 081</p>
                     </div>
                 </div>
                 <!-- End Info Item -->
@@ -43,8 +43,8 @@
                 <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
                     <i class="bi bi-envelope flex-shrink-0"></i>
                     <div>
-                        <h3>Email Us</h3>
-                        <p>info@example.com</p>
+                        <h3>Email</h3>
+                        <p>kontakt@studiodevs.pl</p>
                     </div>
                 </div>
                 <!-- End Info Item -->
