--- a/themes/stdevs/partials/home/cta.htm
+++ b/themes/stdevs/partials/home/cta.htm
@@ -1,18 +1,22 @@
 <!-- Call To Action Section -->
-<section id="call-to-action" class="call-to-action section dark-background">
-    <img src="{{ 'assets/img/cta-bg.jpg'|theme }}" alt="" />
+<section id="call-to-action"
+         class="call-to-action section dark-background">
+    <img src="{{ 'assets/img/cta-bg.jpg'|theme }}"
+         alt="" />
 
     <div class="container">
-        <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
+        <div class="row justify-content-center"
+             data-aos="zoom-in"
+             data-aos-delay="100">
             <div class="col-xl-10">
                 <div class="text-center">
-                    <h3>Call To Action</h3>
+                    <h3>Masz pomysł na projekt? Porozmawiajmy</h3>
                     <p>
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.
+                        Tworzymy nowoczesne strony internetowe i aplikacje, które pomagają firmom rozwijać się w świecie
+                        cyfrowym.</br>
+                        Skontaktuj się z nami, aby omówić Twój pomysł i dowiedzieć się, jak możemy Ci pomóc!
                     </p>
-                    <a class="cta-btn" href="#">Call To Action</a>
+                    <a class="cta-btn" href="#">Dowiedz się więcej</a>
                 </div>
             </div>
         </div>
