--- a/themes/stdevs/partials/home/portfolio.htm
+++ b/themes/stdevs/partials/home/portfolio.htm
@@ -3,17 +3,16 @@
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Check our Portfolio</p>
+        <p>Nasze realizacje</p>
     </div>
     <!-- End Section Title -->
 
     <div class="container">
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
             <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-product">Card</li>
-                <li data-filter=".filter-branding">Web</li>
+                <li data-filter="*" class="filter-active">Wszystkie</li>
+                <li data-filter=".filter-app">Aplikacje</li>
+                <li data-filter=".filter-page">Strony</li>
             </ul>
             <!-- End Portfolio Filters -->
 
@@ -25,11 +24,11 @@
                         alt=""
                     />
                     <div class="portfolio-info">
-                        <h4>App 1</h4>
-                        <p>Lorem ipsum, dolor sit</p>
+                        <h4>EJA Nieruchomości</h4>
+                        <p></p>
                         <a
                             href="{{ 'assets/img/masonry-portfolio/masonry-portfolio-1.jpg'|theme }}"
-                            title="App 1"
+                            title="Page 1"
                             data-gallery="portfolio-gallery-app"
                             class="glightbox preview-link"
                             ><i class="bi bi-zoom-in"></i
