--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -60,7 +60,7 @@
 
     <div class="copyright">
         <div class="container text-center">
-            <p>© <span>Copyright</span> <strong class="px-1 sitename">GP</strong> <span>All Rights Reserved</span></p>
+            <p><span>Copyright</span> © <span>{{ 'now'|date('Y') }}</span><strong class="px-1 sitename">StudioDEVS</strong> <span>All Rights Reserved</span></p>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you've purchased the pro version. -->
