--- a/themes/stdevs/partials/header.htm
+++ b/themes/stdevs/partials/header.htm
@@ -1,9 +1,8 @@
 <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
         <a href="{{ 'home'|page }}" class="logo d-flex align-items-center me-auto me-lg-0">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="assets/img/logo.png" alt=""> -->
-            <h1 class="sitename">GP</h1>
+            {# <img src="{{'assets/img/logo.webp'|theme}}" alt=""> #}
+            <h1 class="sitename"><span class="studio">Studio</span><span class="devs">DEVS</span></h1>
             <span>.</span>
         </a>
 
@@ -12,11 +11,10 @@
                 <li>
                     <a href="#hero" class="active">Home<br /></a>
                 </li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#about">O nas</a></li>
+                <li><a href="#services">Usługi</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#team">Team</a></li>
-                <li class="dropdown">
+                {# <li class="dropdown">
                     <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
                         <li><a href="#">Dropdown 1</a></li>
@@ -36,8 +34,8 @@
                         <li><a href="#">Dropdown 3</a></li>
                         <li><a href="#">Dropdown 4</a></li>
                     </ul>
-                </li>
-                <li><a href="#contact">Contact</a></li>
+                </li> #}
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
