--- a/themes/stdevs/partials/home/services.htm
+++ b/themes/stdevs/partials/home/services.htm
@@ -2,8 +2,8 @@
 <section id="services" class="services section">
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Check our Services</p>
+        <h2>Usługi</h2>
+        <p>Nowoczesne technologie dla Ciebie</p>
     </div>
     <!-- End Section Title -->
 
@@ -12,15 +12,12 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item position-relative">
                     <div class="icon">
-                        <i class="bi bi-activity"></i>
+                        <i class="bi bi-globe"></i>
                     </div>
                     <a href="service-details.html" class="stretched-link">
-                        <h3>Nesciunt Mete</h3>
+                        <h3>Strony internetowe</h3>
                     </a>
-                    <p>
-                        Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure
-                        perferendis tempore et consequatur.
-                    </p>
+                    <p>Projektujemy i wdrażamy responsywne strony internetowe dopasowane do Twojej marki i potrzeb użytkowników.</p>
                 </div>
             </div>
             <!-- End Service Item -->
@@ -28,15 +25,12 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="service-item position-relative">
                     <div class="icon">
-                        <i class="bi bi-broadcast"></i>
+                        <i class="bi bi-code-slash"></i>
                     </div>
                     <a href="service-details.html" class="stretched-link">
-                        <h3>Eosle Commodi</h3>
+                        <h3>Aplikacje webowe</h3>
                     </a>
-                    <p>
-                        Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic
-                        non ut nesciunt dolorem.
-                    </p>
+                    <p>Tworzymy aplikacje webowe dostosowane do Twojego biznesu – szybkie, skalowalne i intuicyjne w obsłudze.</p>
                 </div>
             </div>
             <!-- End Service Item -->
@@ -44,15 +38,12 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="service-item position-relative">
                     <div class="icon">
-                        <i class="bi bi-easel"></i>
+                        <i class="bi bi-phone"></i>
                     </div>
                     <a href="service-details.html" class="stretched-link">
-                        <h3>Ledo Markt</h3>
+                        <h3>Aplikacje mobilne</h3>
                     </a>
-                    <p>
-                        Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas
-                        adipisci eos earum corrupti.
-                    </p>
+                    <p>Opracowujemy aplikacje mobilne, które zapewniają wygodę użytkowania na każdym urządzeniu.</p>
                 </div>
             </div>
             <!-- End Service Item -->
@@ -60,15 +51,12 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="service-item position-relative">
                     <div class="icon">
-                        <i class="bi bi-bounding-box-circles"></i>
+                        <i class="bi bi-cart"></i>
                     </div>
                     <a href="service-details.html" class="stretched-link">
-                        <h3>Asperiores Commodit</h3>
+                        <h3>E-commerce</h3>
                     </a>
-                    <p>
-                        Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit
-                        provident adipisci neque.
-                    </p>
+                    <p>Projektujemy i wdrażamy sklepy internetowe optymalizując je pod sprzedaż.</p>
                     <a href="service-details.html" class="stretched-link"></a>
                 </div>
             </div>
@@ -77,15 +65,12 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="service-item position-relative">
                     <div class="icon">
-                        <i class="bi bi-calendar4-week"></i>
+                        <i class="bi bi-brush"></i>
                     </div>
                     <a href="service-details.html" class="stretched-link">
-                        <h3>Velit Doloremque</h3>
+                        <h3>Intuicyjny UI/UX design</h3>
                     </a>
-                    <p>
-                        Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at
-                        autem alias eius labore.
-                    </p>
+                    <p>Tworzymy estetyczne i funkcjonalne interfejsy użytkownika, które zwiększają zaangażowanie klientów.</p>
                     <a href="service-details.html" class="stretched-link"></a>
                 </div>
             </div>
@@ -94,15 +79,12 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
                 <div class="service-item position-relative">
                     <div class="icon">
-                        <i class="bi bi-chat-square-text"></i>
+                        <i class="bi bi-speedometer"></i>
                     </div>
                     <a href="service-details.html" class="stretched-link">
-                        <h3>Dolori Architecto</h3>
+                        <h3>Wsparcie techniczne</h3>
                     </a>
-                    <p>
-                        Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
-                        recusandae ducimus enim.
-                    </p>
+                    <p>Zapewniamy monitoring, aktualizacje i optymalizację stron i aplikacji, aby działały jak najlepiej.</p>
                     <a href="service-details.html" class="stretched-link"></a>
                 </div>
             </div>
