--- a/themes/stdevs/partials/header.htm
+++ b/themes/stdevs/partials/header.htm
@@ -36,6 +36,7 @@
                     </ul>
                 </li> #}
                 <li><a href="#contact">Kontakt</a></li>
+                <li><a href="{{ 'blog'|page }}">Blog</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
