--- a/themes/stdevs/partials/home/about.htm
+++ b/themes/stdevs/partials/home/about.htm
@@ -6,33 +6,30 @@
                 <img src="{{ 'assets/img/about.jpg'|theme }}" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 order-2 order-lg-1 content">
-                <h3>Voluptatem dignissimos provident</h3>
+                <h3>Rozwiązania cyfrowe dla Twojego biznesu</h3>
                 <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.
+                    "Tworzymy nowoczesne aplikacje i strony internetowe, które nie tylko wyglądają świetnie, ale też
+                    działają bez zarzutu."
                 </p>
                 <ul>
                     <li>
                         <i class="bi bi-check2-all"></i>
-                        <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+                        <span>Dedykowane rozwiązania</span>
                     </li>
                     <li>
                         <i class="bi bi-check2-all"></i>
-                        <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span>
+                        <span>Najwyższa jakość kodu</span>
                     </li>
                     <li>
                         <i class="bi bi-check2-all"></i>
-                        <span
-                            >Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                            pariatur.</span
-                        >
+                        <span>Nowoczesne technologie</span>
                     </li>
                 </ul>
                 <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident
+                    <strong>StudioDEVS</strong> to zespół pasjonatów technologii, którzy zamieniają pomysły w działające rozwiązania.
+                    Tworzymy inteligentne aplikacje webowe, szybkie i responsywne strony internetowe oraz systemy
+                    dostosowane do Twoich wymagań. Naszym celem jest dostarczanie intuicyjnych i funkcjonalnych
+                    produktów, które pomagają firmom rozwijać się w świecie cyfrowym.
                 </p>
             </div>
         </div>
