--- a/themes/stdevs/partials/header.htm
+++ b/themes/stdevs/partials/header.htm
@@ -41,6 +41,6 @@
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="#about">Napisz do nas</a>
+        <a class="btn-getstarted" href="{{ 'login'|page }}">Rejestracja / logowanie</a>
     </div>
 </header>
