--- a/themes/stdevs/layouts/default.htm
+++ b/themes/stdevs/layouts/default.htm
@@ -24,6 +24,11 @@
   <link href="{{'assets/vendor/swiper/swiper-bundle.min.css'|theme}}" rel="stylesheet">
   <link href="{{'assets/vendor/glightbox/css/glightbox.min.css'|theme}}" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/3b577f4961.js" crossorigin="anonymous"></script>
+
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
   <!-- Main CSS File -->
   <link href="{{'assets/css/main.css' | theme }}" rel="stylesheet">
@@ -57,6 +62,12 @@
   <!-- Main JS File -->
   <script src="{{'assets/js/main.js'|theme}}"></script>
 </body>
-
+        <link rel="stylesheet"
+              href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+              integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+              crossorigin="" />
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+                integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+                crossorigin=""></script>
 
 </html>
