--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -3,56 +3,20 @@
         <div class="container">
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 footer-about">
-                    <a href="index.html" class="logo d-flex align-items-center">
-                        <span class="sitename">GP</span>
-                    </a>
+                    <div>
+                        <a href="{{ 'home'|page }}" class="logo d-flex align-items-center">
+                            <h4 class="footer-logo"><span class="studio">Studio</span><span class="devs">DEVS</span></h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 footer-links">
                     <div class="footer-contact pt-3">
-                        <p>A108 Adam Street</p>
-                        <p>New York, NY 535022</p>
-                        <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                        <p><strong>Email:</strong> <span>info@example.com</span></p>
+                        <p>Chańcza 79</p>
+                        <p>26-035 Chańcza</p>
+                        <p class="mt-3"><strong>Telefon:</strong><span><a href="tel:724414081"> 724 414 081</a></span></p>
+                        <p><strong>Email:</strong> <span><a href="mailto:kontakt@studiodevs.pl">kontakt@studiodevs.pl</a></span></p>
                     </div>
-                    <div class="social-links d-flex mt-4">
-                        <a href=""><i class="bi bi-twitter-x"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
-                </div>
-
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Useful Links</h4>
-                    <ul>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Home</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> About us</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Services</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Terms of service</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Privacy policy</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Our Services</h4>
-                    <ul>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Design</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Development</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Product Management</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Marketing</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#"> Graphic Design</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-4 col-md-12 footer-newsletter">
-                    <h4>Our Newsletter</h4>
-                    <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-                    <form action="forms/newsletter.php" method="post" class="php-email-form">
-                        <div class="newsletter-form">
-                            <input type="email" name="email" /><input type="submit" value="Subscribe" />
-                        </div>
-                        <div class="loading">Loading</div>
-                        <div class="error-message"></div>
-                        <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-                    </form>
                 </div>
             </div>
         </div>
@@ -60,15 +24,7 @@
 
     <div class="copyright">
         <div class="container text-center">
-            <p><span>Copyright</span> © <span>{{ 'now'|date('Y') }}</span><strong class="px-1 sitename">StudioDEVS</strong> <span>All Rights Reserved</span></p>
-            <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you've purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by
-                <a href="https://themewagon.com">ThemeWagon</a>
-            </div>
+            <p><span>Copyright</span> © <span>{{ 'now'|date('Y') }}</span><strong class="px-1 devs">StudioDEVS</strong></p>
         </div>
     </div>
 </footer>
