--- a/themes/stdevs/partials/header.htm
+++ b/themes/stdevs/partials/header.htm
@@ -41,6 +41,8 @@
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="{{ 'login'|page }}">Rejestracja / logowanie</a>
+        {% if this.page.url != '/login' %}
+            <a class="btn-getstarted" href="{{ 'login'|page }}">Rejestracja / logowanie</a>
+        {% endif %}
     </div>
 </header>
