--- a/themes/stdevs/partials/home/contact.htm
+++ b/themes/stdevs/partials/home/contact.htm
@@ -1,5 +1,5 @@
 <!-- Contact Section -->
-<section id="contact" class="contact section">
+<section id="contact" class="contact section section-background">
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
         <h2>Kontakt</h2>
@@ -9,17 +9,10 @@
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
-            <iframe
-                style="border:0; width: 100%; height: 270px;"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
-                frameborder="0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            <div id="map">
+            </div>
         </div>
-        <!-- End Google Maps -->
-
+        
         <div class="row gy-4">
             <div class="col-lg-4">
                 <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
