--- a/themes/stdevs/partials/registration/default.htm
+++ b/themes/stdevs/partials/registration/default.htm
@@ -5,14 +5,14 @@
                 <div class="card login-card">
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-5 d-none d-md-block">
-                            <img src="{{ 'assets/img/login/keylock.png'|theme }}"
+                            <img src="{{ 'assets/img/login/user.png'|theme }}"
                                  alt="login form"
                                  class="img-fluid login-img"/>
                         </div>
                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-5 text-black">
                                 <form>
-                                    {% partial '@login-form' %}
+                                    {% partial '@register-form' %}
                                 </form>
 
                             </div>
