--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -41,6 +41,7 @@
                     <ul>
                         <li><i class="bi bi-chevron-right"></i> <a href="https://chancza.com.pl"> Portal Chańcza</a></li>
                         <li><i class="bi bi-chevron-right"></i> <a href="https://mojakgp.pl"> Moja KGP</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="https://visit-me.pl"> Visit-me</a></li>
                     </ul>
                 </div>
 
