--- a/themes/stdevs/partials/home/cta.htm
+++ b/themes/stdevs/partials/home/cta.htm
@@ -1,13 +1,8 @@
-<!-- Call To Action Section -->
-<section id="call-to-action"
-         class="call-to-action section dark-background">
-    <img src="{{ 'assets/img/cta-bg.jpg'|theme }}"
-         alt="" />
+<section id="call-to-action" class="call-to-action section dark-background">
+    <img src="{{ 'assets/img/cta-bg.jpg'|theme }}" alt="" />
 
     <div class="container">
-        <div class="row justify-content-center"
-             data-aos="zoom-in"
-             data-aos-delay="100">
+        <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
             <div class="col-xl-10">
                 <div class="text-center">
                     <h3>Masz pomysł na projekt? Porozmawiajmy</h3>
@@ -22,4 +17,3 @@
         </div>
     </div>
 </section>
-<!-- /Call To Action Section -->
