--- a/themes/stdevs/assets/css/main.css
+++ b/themes/stdevs/assets/css/main.css
@@ -1906,3 +1906,29 @@ section,
 .portfolio .container {
     margin-top: 80px; /* Możesz dostosować wartość */
 }
+
+.tech-logo {
+    max-height: 50px; /* Maksymalna wysokość */
+    width: auto;      /* Pozwala zachować proporcje */
+    height: auto;     /* Pozwala zachować proporcje */
+    object-fit: contain; /* Zapewnia, że całe logo jest widoczne */
+}
+.project-hero {
+    position: relative;
+    color: white;
+}
+.project-hero .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: 1;
+}
+.project-hero .container {
+    position: relative;
+    z-index: 2;
+}
+
+
