--- a/themes/stdevs/partials/header.htm
+++ b/themes/stdevs/partials/header.htm
@@ -13,7 +13,7 @@
                 </li>
                 <li><a href="#about">O nas</a></li>
                 <li><a href="#services">Usługi</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="{{ 'portfolio'|page }}">Portfolio</a></li>
                 {# <li class="dropdown">
                     <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
