add main tech field

--- a/plugins/stdevs/toolbox/components/projectdetails/default.htm
+++ b/plugins/stdevs/toolbox/components/projectdetails/default.htm
@@ -2,7 +2,7 @@
 
 <section class="project-hero" style="background: url('{{ project.preview_image|media }}') center/cover;">
     <div class="overlay" style="background-color: {{ project.main_color }};"></div>
-        <div class="container text-center text-white py-5">
+        <div class="container text-center text-white py-5 mt-4">
             <h1 class="display-4">{{ project.title }}</h1>
             <p class="lead">{{ project.description }}</p>
             <a href="{{ project.url }}" class="btn btn-devs-reverse mt-3" target="_blank">Zobacz online</a>
