--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Nasze portale</h4>
+                    <h4>Nasze projekty</h4>
                     <ul>
                         <li><i class="bi bi-chevron-right"></i> <a href="https://chancza.com.pl"> Portal Chańcza</a></li>
                         <li><i class="bi bi-chevron-right"></i> <a href="https://mojakgp.pl"> Moja KGP</a></li>
