--- a/themes/stdevs/partials/home/hero.htm
+++ b/themes/stdevs/partials/home/hero.htm
@@ -1,6 +1,6 @@
 <!-- Hero Section -->
 <section id="hero" class="hero section dark-background">
-    <img src="{{ 'assets/img/hero-bg.jpg'|theme }}" alt="" data-aos="fade-in" />
+    <img src="{{ 'assets/img/hero.jpg'|theme }}" alt="" data-aos="fade-in" />
 
     <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
