hero section amendments

--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -51,7 +51,7 @@
                     <p>Zapisz się nasz newsletter i bądź na bieżąco</p>
                     <form action="forms/newsletter.php" method="post" class="php-email-form">
                         <div class="newsletter-form">
-                            <input type="email" name="email" /><input type="submit" value="Subscribe" />
+                            <input type="email" name="email" /><input type="submit" value="Subskrybuj" />
                         </div>
                         <div class="loading">Loading</div>
                         <div class="error-message"></div>
