--- a/themes/stdevs/partials/home/hero.htm
+++ b/themes/stdevs/partials/home/hero.htm
@@ -1,4 +1,3 @@
-<!-- Hero Section -->
 <section id="hero" class="hero section dark-background">
     <img src="{{ 'assets/img/hero.jpg'|theme }}" alt="" data-aos="fade-in" />
 
@@ -11,34 +10,22 @@
         </div>
 
         <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
-                    <i class="bi bi-binoculars"></i>
-                    <h3><a href="">Lorem Ipsum</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
-                <div class="icon-box">
-                    <i class="bi bi-bullseye"></i>
-                    <h3><a href="">Dolor Sitema</a></h3>
+                    <i class="bi bi-globe"></i>
+                    <h3><a href="">Web-dev</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
-                    <i class="bi bi-fullscreen-exit"></i>
-                    <h3><a href="">Sedare Perspiciatis</a></h3>
+                    <i class="bi bi-phone-flip"></i>
+                    <h3><a href="">Responsywność</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
                 <div class="icon-box">
-                    <i class="bi bi-card-list"></i>
-                    <h3><a href="">Magni Dolores</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="700">
-                <div class="icon-box">
-                    <i class="bi bi-gem"></i>
-                    <h3><a href="">Nemos Enimade</a></h3>
+                    <i class="bi bi-shield-lock"></i>
+                    <h3><a href="">Bezpieczeństwo</a></h3>
                 </div>
             </div>
         </div>
