--- a/themes/stdevs/layouts/default.htm
+++ b/themes/stdevs/layouts/default.htm
@@ -8,8 +8,8 @@
         <meta name="keywords" content="" />
 
         <!-- Favicons -->
-        <link href="{{ 'assets/img/logo.webp'|theme }}" rel="icon" />
-        <link href="{{ 'assets/img/apple-touch-icon.png'|theme }}" rel="apple-touch-icon" />
+        <link href="{{ 'assets/img/favicons/favicon-32x32.png'|theme }}" rel="icon" />
+        <link href="{{ 'assets/img/favicons/apple-touch-icon.png'|theme }}" rel="apple-touch-icon" />
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com" rel="preconnect" />
