--- a/themes/stdevs/partials/header.htm
+++ b/themes/stdevs/partials/header.htm
@@ -35,7 +35,7 @@
                         <li><a href="#">Dropdown 4</a></li>
                     </ul>
                 </li> #}
-                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="{{ 'contact'|page }}">Kontakt</a></li>
                 <li><a href="{{ 'blog'|page }}">Blog</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
