--- a/themes/stdevs/partials/home/contact.htm
+++ b/themes/stdevs/partials/home/contact.htm
@@ -1,13 +1,12 @@
-<section id="contact" class="contact section section-background">
-    <div class="container section-title" data-aos="fade-up">
+{# <section id="contact" class="contact  section-background"> #}
+    <div class="container section-title section-no-padding" data-aos="fade-up">
         <h2>Kontakt</h2>
         <p>Zapraszamy do nas</p>
     </div>
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
-            <div id="map">
-            </div>
         </div>
     </div>
-</section>
+<div id="map"> </div>
+{# </section> #}
