--- a/themes/stdevs/partials/home/cta.htm
+++ b/themes/stdevs/partials/home/cta.htm
@@ -1,4 +1,4 @@
-<section id="call-to-action" class="call-to-action section dark-background">
+<section id="call-to-action" class="call-to-action section dark-background mb-5">
     <img src="{{ 'assets/img/cta-bg.jpg'|theme }}" alt="" />
 
     <div class="container">
