--- a/themes/stdevs/layouts/default.htm
+++ b/themes/stdevs/layouts/default.htm
@@ -38,6 +38,8 @@
         <!-- Leaflet -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" ></script>
+        <script src="{{ 'assets/vendor/leaflet-colorfilter/src/leaflet-tilelayer-colorfilter.min.js'|theme }}"></script>
+
 
         <!-- Main CSS File -->
         <link href="{{ 'assets/css/style.css' | theme }}" rel="stylesheet" />
@@ -49,6 +51,8 @@
     <body class="index-page">
         {% partial 'header' %}
         {% page %}
+
+        <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
         {% partial 'footer' %}
 
         <!-- Vendor JS Files -->
