newsletter work with magic forms

--- a/themes/stdevs/partials/footer.htm
+++ b/themes/stdevs/partials/footer.htm
@@ -114,19 +114,7 @@
                 <p class="text-gray-300 text-sm mb-6">
                     Zapisz się nasz newsletter i bądź na bieżąco
                 </p>
-                <form class="flex flex-col gap-3">
-                    <input 
-                        type="email" 
-                        placeholder="Twój email"
-                        class="bg-white/10 border border-white/20 rounded-xl px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:border-[#60adad] transition"
-                    >
-                    <button 
-                        type="submit"
-                        class="bg-[#ffc451] text-[#0d1b2a] px-6 py-3 rounded-xl font-semibold hover:bg-[#ffb731] transition"
-                    >
-                        Subskrybuj
-                    </button>
-                </form>
+                {% component 'newsletter' %}
             </div>
             
         </div>
