fix username field type

--- a/themes/stdevs/partials/authentication/default.htm
+++ b/themes/stdevs/partials/authentication/default.htm
@@ -15,7 +15,7 @@
 
             <div class="mb-5">
                 <label class="block text-gray-300 mb-2 text-sm">Nazwa użytkownika</label>
-                <input type="email" name="username" class="w-full px-4 py-3 rounded-xl bg-white/10 border border-white/20 placeholder-gray-400 text-white
+                <input type="text" name="username" class="w-full px-4 py-3 rounded-xl bg-white/10 border border-white/20 placeholder-gray-400 text-white
                        focus:ring-2 focus:ring-[#60adad] focus:outline-none transition" placeholder="podaj e-mail">
             </div>
 
